06_api_gateway/Kuber/anon-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: authapi
            port:
              number: 80
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: authapi
            port:
              number: 80
      - path: /register
        pathType: Prefix
        backend:
          service:
            name: userprofileapi
            port:
              number: 80
