06_api_gateway/Kuber/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress-auth-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /auth/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress-profile-register
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /profile/(register)
        pathType: ImplementationSpecific
        backend:
          service:
            name: userprofile-service
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profile-ingress-use-auth
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/auth-url: "http://auth-service.myns.svc.cluster.local/auth"  # Путь к auth-сервису
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User-Id"  # Проброс заголовка X-User-Id

spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /profile/(.+)
        pathType: ImplementationSpecific
        backend:
          service:
            name: userprofile-service
            port:
              number: 80
