06_api_gateway/Kuber/profile-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profile-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://authapi.default.svc.cluster.local/auth"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User-Id"
    nginx.ingress.kubernetes.io/auth-signin: "http://authapi.default.svc.cluster.local/login"
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /profile
        pathType: Prefix
        backend:
          service:
            name: userprofileapi
            port:
              number: 80
